# ScalarDiffractionTools

./: .gitignore  README.md  build.bat  clean.bat  clean.py  pyproject.toml
scalardiffract/: __init__.py  beam.py  diffract.c  diffract.py  params.py  wave.py
test/: test_gauss.py  test_sphere.py
